# agent-concert

./: .env.template  .gitignore  README.md  azure.yaml  me.sh  prompt.txt  pyproject.toml
.chainlit/: config.toml.old
.devcontainer/: devcontainer.json  init.sh
.github/: copilot-instructions.md
.github/instructions/: azure-verified-modules-bicep.instructions.md  bicep-code-best-practices.instructions.md  git-commit-messages.instructions.md  python-best-practices.instructions.md
.github/skills/conventional-commit/: SKILL.md
docs/: APIM-SETLISTFM.md
infra/: bicepconfig.json  main.bicep  main.parameters.json
infra/modules/: ai-foundry-project.bicep  apim-setlistfm-api.bicep  mcp-api.bicep
infra/openapi/: openapi-setlistfm.yml  spotify-openapi-trimmed.yml  spotify-openapi.yml
infra/policies/: setlistfm-api-policy.xml  setlistfm-mcp-policy.xml  spotify-api-policy.xml  spotify-mcp-policy.xml
scripts/: get-apim-subscription-key.sh  trim-spotify-openapi.py  update-apim-policies.sh  validate-mcp-setlistfm.py  validate-mcp-spotify.py  validate-setlist.py  validate-spotify.py
src/: agent.py  app_chainlit.py  playlist.py
